[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/release-manager/exclude-list-dialog.gd" id="1"]

[node name="ExcludeListDialog" type="Window"]
title = "Obfuscation Exclude-Lists"
initial_position = 2
size = Vector2i(600, 500)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter function/variable names to exclude from obfuscation (one per line)."
autowrap_mode = 2

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FunctionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Functions listed here will NOT be obfuscated.
Useful for functions called via strings that we can't detect automatically."
text = "Function Exclude-List:"
mouse_filter = 0

[node name="FunctionScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FunctionTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/FunctionScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "SaveGame
LoadData
ProcessPayment"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VariableLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Variables listed here will NOT be obfuscated.
Useful for variables accessed via strings (e.g., set/get methods)."
text = "Variable Exclude-List:"
mouse_filter = 0

[node name="VariableScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VariableTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/VariableScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "_connectionString
API_KEY
gameConfig"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
